@@ -31,8 +31,8 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Date;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Iterator;
-import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.LinkedList;
 import java.util.List;
@@ -41,7 +41,9 @@ import java.util.Map;
 import java.util.Set;
 import java.util.SortedMap;
 import java.util.TreeSet;
+import java.util.UUID;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import org.apache.commons.lang.StringEscapeUtils;
 import org.apache.commons.lang.StringUtils;
@@ -59,6 +61,7 @@ import org.lamsfoundation.lams.logevent.service.ILogEventService;
 import org.lamsfoundation.lams.notebook.model.NotebookEntry;
 import org.lamsfoundation.lams.notebook.service.CoreNotebookConstants;
 import org.lamsfoundation.lams.notebook.service.ICoreNotebookService;
+import org.lamsfoundation.lams.qb.model.QbCollection;
 import org.lamsfoundation.lams.qb.model.QbOption;
 import org.lamsfoundation.lams.qb.model.QbQuestion;
 import org.lamsfoundation.lams.qb.model.QbToolQuestion;
@@ -103,10 +106,11 @@ import org.lamsfoundation.lams.tool.service.IQbToolService;
 import org.lamsfoundation.lams.usermanagement.User;
 import org.lamsfoundation.lams.usermanagement.dto.UserDTO;
 import org.lamsfoundation.lams.usermanagement.service.IUserManagementService;
-import org.lamsfoundation.lams.util.ExcelCell;
 import org.lamsfoundation.lams.util.JsonUtil;
 import org.lamsfoundation.lams.util.MessageService;
 import org.lamsfoundation.lams.util.NumberUtil;
+import org.lamsfoundation.lams.util.excel.ExcelRow;
+import org.lamsfoundation.lams.util.excel.ExcelSheet;
 
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
@@ -117,8 +121,6 @@ import com.fasterxml.jackson.databind.node.ObjectNode;
 public class ScratchieServiceImpl implements IScratchieService, ICommonScratchieService, ToolContentManager,
 	ToolSessionManager, ToolRestManager, IQbToolService {
     private static Logger log = Logger.getLogger(ScratchieServiceImpl.class.getName());
-
-    private static final ExcelCell[] EMPTY_ROW = new ExcelCell[4];
 
     private ScratchieDAO scratchieDao;
 
@@ -202,6 +204,14 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	return scratchieUserDao.getUserByUserIDAndSessionID(userId, sessionId);
     }
 
+    @SuppressWarnings("unchecked")
+    @Override
+    public ScratchieUser getUserByLoginAndSessionId(String login, long toolSessionId) {
+	List<User> user = scratchieUserDao.findByProperty(User.class, "login", login);
+	return user.isEmpty() ? null
+		: scratchieUserDao.getUserByUserIDAndSessionID(user.get(0).getUserId().longValue(), toolSessionId);
+    }
+
     @Override
     public int countUsersByContentId(Long contentId) {
 	return scratchieUserDao.countUsersByContentId(contentId);
@@ -242,7 +252,8 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	    }
 	}
 
-	return presetMarks.split(",");
+	//remove all white spaces and split the settings around matches of ","
+	return presetMarks.replaceAll("\\s+", "").split(",");
     }
 
     @Override
@@ -297,6 +308,14 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
     @Override
     public Set<ToolActivity> getActivitiesProvidingVsaAnswers(Long toolContentId) {
 	return toolService.getActivitiesProvidingVsaAnswers(toolContentId);
+    }
+
+    @Override
+    public boolean isUserGroupLeader(Long userId, Long toolSessionId) {
+	ScratchieSession session = getScratchieSessionBySessionId(toolSessionId);
+	ScratchieUser groupLeader = session.getGroupLeader();
+
+	return (groupLeader != null) && userId.equals(groupLeader.getUserId());
     }
 
     @Override
@@ -377,7 +396,7 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	List<ScratchieUser> users = this.getUsersBySession(sessionId);
 	for (ScratchieUser user : users) {
 
-	    toolService.updateActivityMark(new Double(newMark), null, user.getUserId().intValue(),
+	    toolService.updateActivityMark(newMark.doubleValue(), null, user.getUserId().intValue(),
 		    user.getSession().getSessionId(), false);
 
 	    // record mark change with audit service
@@ -408,6 +427,11 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
     @Override
     public int countSessionsByContentId(Long toolContentId) {
 	return scratchieSessionDao.getByContentId(toolContentId).size();
+    }
+
+    @Override
+    public List<ScratchieSession> getSessionsByContentId(Long toolContentId) {
+	return scratchieSessionDao.getByContentId(toolContentId);
     }
 
     @Override
@@ -479,7 +503,7 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	if (isPropagateToGradebook) {
 	    List<ScratchieUser> users = getUsersBySession(sessionId);
 	    for (ScratchieUser user : users) {
-		toolService.updateActivityMark(new Double(mark), null, user.getUserId().intValue(),
+		toolService.updateActivityMark(Double.valueOf(mark), null, user.getUserId().intValue(),
 			user.getSession().getSessionId(), false);
 	    }
 	}
@@ -611,6 +635,19 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	    ScratchieUser user = scratchieUserDao.getUserByUserIDAndSessionID(userId, toolSessionId);
 	    user.setSessionFinished(true);
 	    scratchieUserDao.saveObject(user);
+
+	    //if this is a leader finishes, complete all non-leaders as well
+	    boolean isUserGroupLeader = user.getSession().isUserGroupLeader(user.getUid());
+	    if (isUserGroupLeader) {
+		getUsersBySession(toolSessionId).forEach(sessionUser -> {
+		    //finish non-leader
+		    sessionUser.setSessionFinished(true);
+		    scratchieUserDao.saveObject(user);
+
+		    // as long as there is no individual results in Scratchie tool (but rather one for entire group) there is no
+		    // need to copyAnswersFromLeader()
+		});
+	    }
 
 	    nextUrl = this.leaveToolSession(toolSessionId, userId);
 	} catch (DataMissingException e) {
@@ -805,6 +842,16 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	    if (item.getQbQuestion().getType() != QbQuestion.TYPE_VERY_SHORT_ANSWERS) {
 		continue;
 	    }
+	    //clear optionDtos in case fillItemsWithVsaAnswers is used in a loop
+//	    item.getOptionDtos().clear();
+	    List<OptionDTO> optionDtosFromScratchieUsers = new LinkedList<>();
+	    for (OptionDTO optionDto : item.getOptionDtos()) {
+		if (optionDto.getDisplayOrder() == -200) {
+		    optionDtosFromScratchieUsers.add(optionDto);
+		}
+	    }
+	    item.getOptionDtos().clear();
+	    item.getOptionDtos().addAll(optionDtosFromScratchieUsers);
 
 	    //populate Scratchie items with VSA answers, entered by learners in Assessment tool
 	    if (scratchie.isAnswersFetchingEnabled()) {
@@ -816,6 +863,7 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 			optionDto.setCorrect(assessmentAnswer.isCorrect());
 			optionDto.setUserId(assessmentAnswer.getUserId());
 			optionDto.setQbQuestionUid(assessmentAnswer.getQbQuestionUid());
+			optionDto.setDisplayOrder(-100);
 			if (!scratchie.isConfidenceLevelsEnabled()) {
 			    //don't show confidence levels
 			    for (ConfidenceLevelDTO confidenceLevel : assessmentAnswer.getConfidenceLevels()) {
@@ -840,6 +888,7 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 			if (itemQbQuestionUid.equals(optionDtoIter.getQbQuestionUid())
 				&& isAnswersEqual(item, optionDtoIter.getAnswer(), userLog.getAnswer())) {
 			    optionDto = optionDtoIter;
+			    //skip showing ConfidenceLevel, as we already show it due to this user's answer in Assessment
 			    skipAddingUserAnswerToConfidenceLevel = optionDtoIter.getUserId()
 				    .equals(leader.getUserId());
 			    break;
@@ -854,8 +903,10 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 			optionDto.setQbQuestionUid(itemQbQuestionUid);
 			String answer = userLog.getAnswer();
 			optionDto.setAnswer(answer);
+			optionDto.setDisplayOrder(-200);
 			boolean isCorrect = ScratchieServiceImpl.isItemUnraveledByAnswers(item, List.of(answer));
 			optionDto.setCorrect(isCorrect);
+			optionDto.setUserId(leader.getUserId());
 			item.getOptionDtos().add(optionDto);
 		    }
 
@@ -921,8 +972,7 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
     public static boolean isItemUnraveledByAnswers(ScratchieItem item, List<String> userAnswers) {
 	QbQuestion qbQuestion = item.getQbQuestion();
 
-	QbOption correctAnswersGroup = qbQuestion.getQbOptions().get(0).getMaxMark() == 1
-		? qbQuestion.getQbOptions().get(0)
+	QbOption correctAnswersGroup = qbQuestion.getQbOptions().get(0).isCorrect() ? qbQuestion.getQbOptions().get(0)
 		: qbQuestion.getQbOptions().get(1);
 	String[] correctAnswers = correctAnswersGroup.getName().strip().split("\\r\\n");
 	for (String correctAnswer : correctAnswers) {
@@ -1005,11 +1055,11 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
     }
 
     @Override
-    public List<GroupSummary> getQuestionSummary(Long contentId, Long itemUid) {
+    public List<GroupSummary> getGroupSummariesByItem(Long contentId, Long itemUid) {
 	List<GroupSummary> groupSummaryList = new ArrayList<>();
-	Scratchie scratchie = getScratchieByContentId(contentId);
 	ScratchieItem item = scratchieItemDao.getByUid(itemUid);
 	boolean isMcqItem = item.getQbQuestion().getType() == QbQuestion.TYPE_MULTIPLE_CHOICE;
+	List<QbOption> options = item.getQbQuestion().getQbOptions();
 
 	List<ScratchieSession> sessionList = scratchieSessionDao.getByContentId(contentId);
 	for (ScratchieSession session : sessionList) {
@@ -1018,27 +1068,18 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	    GroupSummary groupSummary = new GroupSummary(session);
 	    List<ScratchieAnswerVisitLog> sessionAttempts = scratchieAnswerVisitDao.getLogsBySessionAndItem(sessionId,
 		    itemUid);
+	    int numberColumns = options.size() > sessionAttempts.size() || isMcqItem ? options.size()
+		    : sessionAttempts.size();
+	    groupSummary.setNumberColumns(numberColumns);
 
 	    Map<Long, OptionDTO> optionMap = new HashMap<>();
-	    if (isMcqItem) {
-		List<QbOption> options = item.getQbQuestion().getQbOptions();
-		for (QbOption dbOption : options) {
-		    // clone it so it doesn't interfere with values from other sessions
-		    OptionDTO optionDto = new OptionDTO(dbOption);
-		    int[] attempts = new int[options.size()];
-		    optionDto.setAttempts(attempts);
-		    optionMap.put(dbOption.getUid(), optionDto);
-		}
-
-	    } else {
-		item.getOptionDtos().clear();
-		fillItemsWithVsaAnswers(List.of(item), sessionId, scratchie, sessionAttempts);
-		List<OptionDTO> optionDtos = item.getOptionDtos();
-		for (OptionDTO optionDto : optionDtos) {
-		    int[] attempts = new int[optionDtos.size()];
-		    optionDto.setAttempts(attempts);
-		    optionMap.put(Long.valueOf(optionDto.getAnswerHash()), optionDto);
-		}
+	    Long i = 0l;
+	    for (QbOption dbOption : options) {
+		// clone it so it doesn't interfere with values from other sessions
+		OptionDTO optionDto = new OptionDTO(dbOption);
+		int[] attempts = new int[numberColumns];
+		optionDto.setAttempts(attempts);
+		optionMap.put(dbOption.getUid(), optionDto);
 	    }
 
 	    // calculate attempts table
@@ -1047,18 +1088,27 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 		int attemptNumber = 0;
 
 		for (ScratchieAnswerVisitLog attempt : sessionAttempts) {
-		    Long optionUidOrAnswer = isMcqItem ? attempt.getQbOption().getUid()
-			    : attempt.getAnswer().hashCode();
-		    OptionDTO optionDto = optionMap.get(optionUidOrAnswer);
-		    int[] attempts = optionDto == null ? new int[optionMap.size()] : optionDto.getAttempts();
+		    Long optionUid;
+		    if (isMcqItem) {
+			optionUid = attempt.getQbOption().getUid();
+
+		    } else {
+			String answer = attempt.getAnswer();
+			boolean isCorrect = ScratchieServiceImpl.isItemUnraveledByAnswers(item, List.of(answer));
+			boolean isFirstAnswersGroupCorrect = options.get(0).isCorrect();
+
+			optionUid = isCorrect && isFirstAnswersGroupCorrect || !isCorrect && !isFirstAnswersGroupCorrect
+				? options.get(0).getUid()
+				: options.get(1).getUid();
+		    }
+		    OptionDTO optionDto = optionMap.get(optionUid);
+		    int[] attempts = optionDto.getAttempts();
 		    // +1 for corresponding choice
 		    attempts[attemptNumber++]++;
 		}
 	    }
 
-	    Collection<OptionDTO> sortedOptions = new LinkedList<>();
-	    sortedOptions.addAll(optionMap.values());
-	    groupSummary.setOptionDtos(sortedOptions);
+	    groupSummary.setOptionDtos(optionMap.values());
 	    groupSummaryList.add(groupSummary);
 	}
 
@@ -1068,11 +1118,10 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	    groupSummaryTotal.setSessionId(0L);
 	    groupSummaryTotal.setSessionName("Summary");
 	    groupSummaryTotal.setMark(0);
+	    groupSummaryTotal.setNumberColumns(options.size());
 
 	    Map<Long, OptionDTO> optionMapTotal = new HashMap<>();
-	    List<QbOption> options = item.getQbQuestion().getQbOptions();
 	    for (QbOption dbOption : options) {
-
 		// clone it so it doesn't interfere with values from other sessions
 		OptionDTO optionDto = new OptionDTO(dbOption);
 		int[] attempts = new int[options.size()];
@@ -1093,9 +1142,7 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 		}
 	    }
 
-	    Collection<OptionDTO> sortedOptions = new TreeSet<>();
-	    sortedOptions.addAll(optionMapTotal.values());
-	    groupSummaryTotal.setOptionDtos(sortedOptions);
+	    groupSummaryTotal.setOptionDtos(optionMapTotal.values());
 	    groupSummaryList.add(0, groupSummaryTotal);
 	}
 
@@ -1139,11 +1186,10 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 
 	// handle general burning question
 	BurningQuestionItemDTO generalBurningQuestionItemDto = new BurningQuestionItemDTO();
-	ScratchieItem generalDummyItem = new ScratchieItem();
+	ScratchieItem generalDummyItem = new ScratchieItem();//generalDummyItem's uid will be set to 0 in jsp
 	generalDummyItem.setQbQuestion(new QbQuestion());
 	releaseFromCache(generalDummyItem);
 	releaseFromCache(generalDummyItem.getQbQuestion());
-	// generalDummyItem.setUid(0L);
 	final String generalQuestionMessage = messageService.getMessage("label.general.burning.question");
 	generalDummyItem.getQbQuestion().setName(generalQuestionMessage);
 	generalBurningQuestionItemDto.setScratchieItem(generalDummyItem);
@@ -1244,48 +1290,79 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	return (ScratchieUser) scratchieUserDao.getObject(ScratchieUser.class, uid);
     }
 
+    /**
+     * Return list of correct AnswerLetters, one per each item
+     */
+    public static List<String> getCorrectAnswerLetters(Collection<ScratchieItem> items) {
+	List<String> correctAnswerLetters = new ArrayList<>();
+	for (ScratchieItem item : items) {
+	    boolean isMcqItem = item.getQbQuestion().getType() == QbQuestion.TYPE_MULTIPLE_CHOICE;
+
+	    // find out the correct answer's sequential letter - A,B,C...
+	    String correctAnswerLetter = "";
+	    if (isMcqItem) {
+		int answerCount = 1;
+		for (OptionDTO answer : item.getOptionDtos()) {
+		    if (answer.isCorrect()) {
+			correctAnswerLetter = String.valueOf((char) ((answerCount + 'A') - 1));
+			break;
+		    }
+		    answerCount++;
+		}
+
+	    } else {
+		List<QbOption> options = item.getQbQuestion().getQbOptions();
+		if (!options.isEmpty()) {
+		    correctAnswerLetter = options.get(0).isCorrect() ? "A" : "B";
+		}
+	    }
+	    correctAnswerLetters.add(correctAnswerLetter);
+	}
+
+	return correctAnswerLetters;
+    }
+
     @Override
-    public LinkedHashMap<String, ExcelCell[][]> exportExcel(Long contentId) {
+    public List<ExcelSheet> exportExcel(Long contentId) {
 	Scratchie scratchie = scratchieDao.getByContentId(contentId);
 	Collection<ScratchieItem> items = new TreeSet<>(new ScratchieItemComparator());
 	items.addAll(scratchie.getScratchieItems());
 	int numberOfItems = items.size();
 
-	LinkedHashMap<String, ExcelCell[][]> dataToExport = new LinkedHashMap<>();
+	List<ExcelSheet> sheets = new LinkedList<>();
 
 	// ======================================================= For Immediate Analysis page
 	// =======================================
+	ExcelSheet immediateAnalysisSheet = new ExcelSheet(getMessage("label.for.immediate.analysis"));
+	sheets.add(immediateAnalysisSheet);
 
-	List<ExcelCell[]> rowList = new LinkedList<>();
+	ExcelRow row = immediateAnalysisSheet.initRow();
+	row.addCell(getMessage("label.quick.analysis"), true);
 
-	ExcelCell[] row = new ExcelCell[1];
-	row[0] = new ExcelCell(getMessage("label.quick.analysis"), true);
-	rowList.add(row);
-	row = new ExcelCell[2];
-	row[1] = new ExcelCell(getMessage("label.in.table.below.we.show"), false);
-	rowList.add(row);
-	rowList.add(ScratchieServiceImpl.EMPTY_ROW);
+	row = immediateAnalysisSheet.initRow();
+	row.addEmptyCell();
+	row.addCell(getMessage("label.in.table.below.we.show"));
+	immediateAnalysisSheet.addEmptyRow();
 
-	row = new ExcelCell[3];
-	row[2] = new ExcelCell(getMessage("label.questions"), false);
-	rowList.add(row);
+	row = immediateAnalysisSheet.initRow();
+	row.addEmptyCells(2);
+	row.addCell(getMessage("label.questions"));
 
-	row = new ExcelCell[numberOfItems + 4];
-	int columnCount = 1;
-	row[columnCount++] = new ExcelCell(getMessage("label.teams"), true);
+	row = immediateAnalysisSheet.initRow();
+	row.addEmptyCell();
+	row.addCell(getMessage("label.teams"), true);
 	for (int itemCount = 0; itemCount < numberOfItems; itemCount++) {
-	    row[columnCount++] = new ExcelCell("Q" + (itemCount + 1), true);
+	    row.addCell("Q" + (itemCount + 1), true);
 	}
-	row[columnCount++] = new ExcelCell(getMessage("label.total"), true);
-	row[columnCount++] = new ExcelCell(getMessage("label.total") + " %", true);
-	rowList.add(row);
+	row.addCell(getMessage("label.total"), true);
+	row.addCell(getMessage("label.total") + " %", true);
 
 	List<GroupSummary> summaryByTeam = getSummaryByTeam(scratchie, items);
 	for (GroupSummary summary : summaryByTeam) {
 
-	    row = new ExcelCell[numberOfItems + 4];
-	    columnCount = 1;
-	    row[columnCount++] = new ExcelCell(summary.getSessionName(), true);
+	    row = immediateAnalysisSheet.initRow();
+	    row.addEmptyCell();
+	    row.addCell(summary.getSessionName(), true);
 
 	    int numberOfFirstChoiceEvents = 0;
 	    for (ScratchieItemDTO itemDto : summary.getItemDtos()) {
@@ -1304,70 +1381,49 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 		    isFirstChoice = getMessage("label.incorrect");
 		    color = IndexedColors.RED;
 		}
-		row[columnCount++] = new ExcelCell(isFirstChoice, color);
+		row.addCell(isFirstChoice, color);
 	    }
-	    row[columnCount++] = new ExcelCell(new Integer(numberOfFirstChoiceEvents), false);
-	    int percentage = (numberOfItems == 0) ? 0 : (100 * numberOfFirstChoiceEvents) / numberOfItems;
-	    row[columnCount++] = new ExcelCell(percentage + "%", false);
-	    rowList.add(row);
+	    row.addCell(Integer.valueOf(numberOfFirstChoiceEvents));
+	    double percentage = (numberOfItems == 0) ? 0 : (double) numberOfFirstChoiceEvents / numberOfItems;
+	    row.addPercentageCell(percentage);
 	}
-
-	ExcelCell[][] firstPageData = rowList.toArray(new ExcelCell[][] {});
-	dataToExport.put(getMessage("label.for.immediate.analysis"), firstPageData);
 
 	// ======================================================= For Report by Team TRA page
 	// =======================================
+	ExcelSheet reportByTeamSheet = new ExcelSheet(getMessage("label.report.by.team.tra"));
+	sheets.add(reportByTeamSheet);
 
-	rowList = new LinkedList<>();
+	row = reportByTeamSheet.initRow();
+	row.addCell(getMessage("label.quick.analysis"), true);
 
-	row = new ExcelCell[1];
-	row[0] = new ExcelCell(getMessage("label.quick.analysis"), true);
-	rowList.add(row);
-	row = new ExcelCell[2];
-	row[1] = new ExcelCell(getMessage("label.table.below.shows.which.answer.teams.selected.first.try"), false);
-	rowList.add(row);
-	rowList.add(ScratchieServiceImpl.EMPTY_ROW);
+	row = reportByTeamSheet.initRow();
+	row.addEmptyCell();
+	row.addCell(getMessage("label.table.below.shows.which.answer.teams.selected.first.try"));
+	reportByTeamSheet.addEmptyRow();
 
-	row = new ExcelCell[numberOfItems + 3];
-	columnCount = 1;
+	row = reportByTeamSheet.initRow();
+	row.addEmptyCell();
 	for (int itemCount = 0; itemCount < numberOfItems; itemCount++) {
-	    row[columnCount++] = new ExcelCell(getMessage("label.authoring.basic.instruction") + " " + (itemCount + 1),
-		    false);
+	    row.addCell(getMessage("label.authoring.basic.instruction") + " " + (itemCount + 1));
 	}
-	row[columnCount++] = new ExcelCell(getMessage("label.total"), false);
-	row[columnCount++] = new ExcelCell(getMessage("label.total") + " %", false);
-	rowList.add(row);
+	row.addCell(getMessage("label.total"));
+	row.addCell(getMessage("label.total") + " %");
 
-	row = new ExcelCell[numberOfItems + 1];
-	columnCount = 0;
-	row[columnCount++] = new ExcelCell(getMessage("label.correct.answer"), false);
-	for (ScratchieItem item : items) {
-
-	    // find out the correct answer's sequential letter - A,B,C...
-	    String correctOptionLetter = "";
-	    int optionCount = 1;
-	    for (OptionDTO optionDto : item.getOptionDtos()) {
-		if (optionDto.isCorrect()) {
-		    correctOptionLetter = String.valueOf((char) ((optionCount + 'A') - 1));
-		    break;
-		}
-		optionCount++;
-	    }
-	    row[columnCount++] = new ExcelCell(correctOptionLetter, false);
+	row = reportByTeamSheet.initRow();
+	row.addCell(getMessage("label.correct.answer"));
+	for (String correctAnswerLetter : ScratchieServiceImpl.getCorrectAnswerLetters(items)) {
+	    row.addCell(correctAnswerLetter);
 	}
-	rowList.add(row);
 
-	row = new ExcelCell[1];
-	row[0] = new ExcelCell(getMessage("monitoring.label.group"), false);
-	rowList.add(row);
+	row = reportByTeamSheet.initRow();
+	row.addCell(getMessage("monitoring.label.group"));
 
 	int groupCount = 1;
-	int[] percentages = new int[summaryByTeam.size()];
+	double[] percentages = new double[summaryByTeam.size()];
 	for (GroupSummary summary : summaryByTeam) {
 
-	    row = new ExcelCell[numberOfItems + 3];
-	    columnCount = 0;
-	    row[columnCount++] = new ExcelCell(summary.getSessionName(), false);
+	    row = reportByTeamSheet.initRow();
+	    row.addCell(summary.getSessionName());
 
 	    int numberOfFirstChoiceEvents = 0;
 	    for (ScratchieItemDTO itemDto : summary.getItemDtos()) {
@@ -1377,12 +1433,12 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 		    color = IndexedColors.GREEN;
 		    numberOfFirstChoiceEvents++;
 		}
-		row[columnCount++] = new ExcelCell(itemDto.getOptionsSequence(), color);
+		row.addCell(itemDto.getOptionsSequence(), color);
 	    }
-	    row[columnCount++] = new ExcelCell(new Integer(numberOfFirstChoiceEvents), false);
-	    int percentage = (numberOfItems == 0) ? 0 : (100 * numberOfFirstChoiceEvents) / numberOfItems;
-	    row[columnCount++] = new ExcelCell(percentage + "%", false);
-	    rowList.add(row);
+	    row.addCell(Integer.valueOf(numberOfFirstChoiceEvents));
+	    double percentage = (numberOfItems == 0) ? 0 : (double) numberOfFirstChoiceEvents / numberOfItems;
+	    row.addPercentageCell(percentage);
+
 	    percentages[groupCount - 1] = percentage;
 	    groupCount++;
 	}
@@ -1395,76 +1451,65 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	    sum += percentages[i];
 	}
 	int percentagesLength = percentages.length == 0 ? 1 : percentages.length;
-	int avgMean = sum / percentagesLength;
-	row = new ExcelCell[numberOfItems + 3];
-	row[0] = new ExcelCell(getMessage("label.avg.mean"), false);
-	row[numberOfItems + 2] = new ExcelCell(avgMean + "%", false);
-	rowList.add(row);
+	double avgMean = (double) sum / percentagesLength;
+	row = reportByTeamSheet.initRow();
+	row.addCell(getMessage("label.avg.mean"));
+	row.addEmptyCells(numberOfItems + 1);
+	row.addPercentageCell(avgMean);
 
 	// median
-	int median;
+	double median;
 	int middle = percentages.length / 2;
 	if ((percentages.length % 2) == 1) {
 	    median = percentages[middle];
 	} else {
-	    median = (int) ((percentages[middle - 1] + percentages[middle]) / 2.0);
+	    median = (percentages[middle - 1] + percentages[middle]) / 2.0;
 	}
-	row = new ExcelCell[numberOfItems + 3];
-	row[0] = new ExcelCell(getMessage("label.median"), false);
-	row[numberOfItems + 2] = new ExcelCell(median, false);
-	rowList.add(row);
+	row = reportByTeamSheet.initRow();
+	row.addCell(getMessage("label.median"));
+	row.addEmptyCells(numberOfItems + 1);
+	row.addCell(median);
 
-	row = new ExcelCell[1];
-	row[0] = new ExcelCell(getMessage("label.legend"), false);
-	rowList.add(row);
+	row = reportByTeamSheet.initRow();
+	row.addCell(getMessage("label.legend"));
 
-	row = new ExcelCell[1];
-	row[0] = new ExcelCell(getMessage("label.denotes.correct.answer"), IndexedColors.GREEN);
-	rowList.add(row);
-
-	ExcelCell[][] secondPageData = rowList.toArray(new ExcelCell[][] {});
-	dataToExport.put(getMessage("label.report.by.team.tra"), secondPageData);
+	row = reportByTeamSheet.initRow();
+	row.addCell(getMessage("label.denotes.correct.answer"), IndexedColors.GREEN);
 
 	// ======================================================= Research and Analysis page
 	// =======================================
-
-	// all rows
-	rowList = new LinkedList<>();
+	ExcelSheet researchAndAnalysisSheet = new ExcelSheet(getMessage("label.research.analysis"));
+	sheets.add(researchAndAnalysisSheet);
 
 	// Caption
-	row = new ExcelCell[2];
-	row[0] = new ExcelCell(getMessage("label.scratchie.report"), true);
-	rowList.add(row);
-	rowList.add(ScratchieServiceImpl.EMPTY_ROW);
-	rowList.add(ScratchieServiceImpl.EMPTY_ROW);
+	row = researchAndAnalysisSheet.initRow();
+	row.addCell(getMessage("label.scratchie.report"), true);
+	researchAndAnalysisSheet.addEmptyRow();
+	researchAndAnalysisSheet.addEmptyRow();
 
 	// Overall Summary by Team --------------------------------------------------
-	row = new ExcelCell[2];
-	row[0] = new ExcelCell(getMessage("label.overall.summary.by.team"), true);
-	rowList.add(row);
+	row = researchAndAnalysisSheet.initRow();
+	row.addCell(getMessage("label.overall.summary.by.team"), true);
 
-	row = new ExcelCell[(numberOfItems * 3) + 1];
-	columnCount = 1;
+	row = researchAndAnalysisSheet.initRow();
+	row.addEmptyCell();
 	for (int itemCount = 0; itemCount < numberOfItems; itemCount++) {
-	    row[columnCount] = new ExcelCell(getMessage("label.for.question", new Object[] { itemCount + 1 }), false);
-	    columnCount += 3;
+	    row.addCell(getMessage("label.for.question", new Object[] { itemCount + 1 }));
+	    row.addEmptyCells(2);
 	}
-	rowList.add(row);
 
-	row = new ExcelCell[(numberOfItems * 3) + 1];
-	columnCount = 1;
+	row = researchAndAnalysisSheet.initRow();
+	row.addEmptyCell();
 	for (int itemCount = 0; itemCount < numberOfItems; itemCount++) {
-	    row[columnCount++] = new ExcelCell(getMessage("label.first.choice"), IndexedColors.BLUE);
-	    row[columnCount++] = new ExcelCell(getMessage("label.attempts"), IndexedColors.BLUE);
-	    row[columnCount++] = new ExcelCell(getMessage("label.mark"), IndexedColors.BLUE);
+	    row.addCell(getMessage("label.first.choice"), IndexedColors.BLUE);
+	    row.addCell(getMessage("label.attempts"), IndexedColors.BLUE);
+	    row.addCell(getMessage("label.mark"), IndexedColors.BLUE);
 	}
-	rowList.add(row);
 
 	for (GroupSummary summary : summaryByTeam) {
-	    row = new ExcelCell[(numberOfItems * 3) + 1];
-	    columnCount = 0;
+	    row = researchAndAnalysisSheet.initRow();
 
-	    row[columnCount++] = new ExcelCell(summary.getSessionName(), false);
+	    row.addCell(summary.getSessionName());
 
 	    for (ScratchieItemDTO itemDto : summary.getItemDtos()) {
 		int attempts = itemDto.getUserAttempts();
@@ -1481,107 +1526,95 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 		    isFirstChoice = getMessage("label.incorrect");
 		    color = IndexedColors.RED;
 		}
-		row[columnCount++] = new ExcelCell(isFirstChoice, color);
-		row[columnCount++] = new ExcelCell(new Long(attempts), color);
-		Long mark = (itemDto.getUserMark() == -1) ? null : new Long(itemDto.getUserMark());
-		row[columnCount++] = new ExcelCell(mark, false);
+		row.addCell(isFirstChoice, color);
+		row.addCell(Integer.valueOf(attempts), color);
+		Long mark = (itemDto.getUserMark() == -1) ? null : Long.valueOf(itemDto.getUserMark());
+		row.addCell(mark);
 	    }
-	    rowList.add(row);
 	}
-	rowList.add(ScratchieServiceImpl.EMPTY_ROW);
-	rowList.add(ScratchieServiceImpl.EMPTY_ROW);
-	rowList.add(ScratchieServiceImpl.EMPTY_ROW);
+	researchAndAnalysisSheet.addEmptyRow();
+	researchAndAnalysisSheet.addEmptyRow();
+	researchAndAnalysisSheet.addEmptyRow();
 
 	// Overall Summary By Individual Student in each Team----------------------------------------
-	row = new ExcelCell[2];
-	row[0] = new ExcelCell(getMessage("label.overall.summary.by.individual.student"), true);
-	rowList.add(row);
-	rowList.add(ScratchieServiceImpl.EMPTY_ROW);
+	row = researchAndAnalysisSheet.initRow();
+	row.addCell(getMessage("label.overall.summary.by.individual.student"), true);
+	researchAndAnalysisSheet.addEmptyRow();
 
-	row = new ExcelCell[4];
-	row[1] = new ExcelCell(getMessage("label.attempts"), false);
-	row[2] = new ExcelCell(getMessage("label.mark"), false);
-	row[3] = new ExcelCell(getMessage("label.group"), false);
-	rowList.add(row);
+	row = researchAndAnalysisSheet.initRow();
+	row.addEmptyCell();
+	row.addCell(getMessage("label.attempts"));
+	row.addCell(getMessage("label.mark"));
+	row.addCell(getMessage("label.group"));
 
 	List<GroupSummary> summaryList = getMonitoringSummary(contentId, false);
 	for (GroupSummary summary : summaryList) {
 	    for (ScratchieUser user : summary.getUsers()) {
-		row = new ExcelCell[4];
-		row[0] = new ExcelCell(user.getFirstName() + " " + user.getLastName(), false);
-		row[1] = new ExcelCell(new Long(summary.getTotalAttempts()), false);
-		Long mark = (summary.getTotalAttempts() == 0) ? null : new Long(summary.getMark());
-		row[2] = new ExcelCell(mark, false);
-		row[3] = new ExcelCell(summary.getSessionName(), false);
-		rowList.add(row);
+		row = researchAndAnalysisSheet.initRow();
+		row.addCell(user.getFirstName() + " " + user.getLastName());
+		row.addCell(Long.valueOf(summary.getTotalAttempts()));
+		Long mark = (summary.getTotalAttempts() == 0) ? null : Long.valueOf(summary.getMark());
+		row.addCell(mark);
+		row.addCell(summary.getSessionName());
 	    }
 	}
-	rowList.add(ScratchieServiceImpl.EMPTY_ROW);
-	rowList.add(ScratchieServiceImpl.EMPTY_ROW);
+	researchAndAnalysisSheet.addEmptyRow();
+	researchAndAnalysisSheet.addEmptyRow();
 
 	// Question Reports-----------------------------------------------------------------
-	row = new ExcelCell[1];
-	row[0] = new ExcelCell(getMessage("label.question.reports"), true);
-	rowList.add(row);
-	rowList.add(ScratchieServiceImpl.EMPTY_ROW);
+	row = researchAndAnalysisSheet.initRow();
+	row.addCell(getMessage("label.question.reports"), true);
+	researchAndAnalysisSheet.addEmptyRow();
 
 	SimpleDateFormat fullDateFormat = new SimpleDateFormat("dd/MM/yy HH:mm:ss");
 
 	for (ScratchieItem item : items) {
-	    List<GroupSummary> itemSummary = getQuestionSummary(contentId, item.getUid());
+	    List<GroupSummary> itemSummary = getGroupSummariesByItem(contentId, item.getUid());
 	    boolean isMcqItem = item.getQbQuestion().getType() == QbQuestion.TYPE_MULTIPLE_CHOICE;
 
-	    row = new ExcelCell[1];
-	    row[0] = new ExcelCell(
-		    getMessage("label.question.semicolon", new Object[] { item.getQbQuestion().getName() }), true);
-	    rowList.add(row);
+	    row = researchAndAnalysisSheet.initRow();
+	    row.addCell(getMessage("label.question.semicolon", new Object[] { item.getQbQuestion().getName() }), true);
 
-	    row = new ExcelCell[1];
-	    row[0] = new ExcelCell(removeHtmlMarkup(item.getQbQuestion().getDescription()), true);
-	    rowList.add(row);
-	    rowList.add(ScratchieServiceImpl.EMPTY_ROW);
-	    rowList.add(ScratchieServiceImpl.EMPTY_ROW);
-
+	    row = researchAndAnalysisSheet.initRow();
+	    row.addCell(removeHtmlMarkup(item.getQbQuestion().getDescription()), true);
+	    researchAndAnalysisSheet.addEmptyRow();
+	    researchAndAnalysisSheet.addEmptyRow();
 	    // show all team summary in case there is more than 1 group
 	    if (summaryList.size() > 1 && isMcqItem) {
-		row = new ExcelCell[1];
-		row[0] = new ExcelCell(getMessage("label.all.teams.summary"), true);
-		rowList.add(row);
+		row = researchAndAnalysisSheet.initRow();
+		row.addCell(getMessage("label.all.teams.summary"), true);
 
 		GroupSummary allTeamSummary = itemSummary.get(0);
 		Collection<OptionDTO> optionDtos = allTeamSummary.getOptionDtos();
 
-		row = new ExcelCell[1 + optionDtos.size()];
+		row = researchAndAnalysisSheet.initRow();
+		row.addEmptyCell();
 		for (int i = 0; i < optionDtos.size(); i++) {
-		    row[i + 1] = new ExcelCell((long) i + 1, IndexedColors.YELLOW);
+		    row.addCell((long) i + 1, IndexedColors.YELLOW);
 		}
-		rowList.add(row);
 
 		for (OptionDTO optionDto : optionDtos) {
-		    row = new ExcelCell[1 + optionDtos.size()];
-		    String answer;
+		    row = researchAndAnalysisSheet.initRow();
+		    String answerTitle = removeHtmlMarkup(optionDto.getAnswer());
+
 		    IndexedColors color = null;
-		    answer = removeHtmlMarkup(optionDto.getAnswer());
 		    if (optionDto.isCorrect()) {
-			answer += "(" + getMessage("label.monitoring.item.summary.correct") + ")";
+			answerTitle += "(" + getMessage("label.monitoring.item.summary.correct") + ")";
 			color = IndexedColors.GREEN;
 		    }
-
-		    columnCount = 0;
-		    row[columnCount++] = new ExcelCell(answer, color);
+		    row.addCell(answerTitle, color);
 
 		    for (int numberAttempts : optionDto.getAttempts()) {
-			row[columnCount++] = new ExcelCell(new Long(numberAttempts), false);
+			row.addCell(Integer.valueOf(numberAttempts));
 		    }
-		    rowList.add(row);
 		}
-		rowList.add(ScratchieServiceImpl.EMPTY_ROW);
-		rowList.add(ScratchieServiceImpl.EMPTY_ROW);
+		researchAndAnalysisSheet.addEmptyRow();
+		researchAndAnalysisSheet.addEmptyRow();
 	    }
 
-	    row = new ExcelCell[1];
-	    row[0] = new ExcelCell(getMessage("label.breakdown.by.team"), true);
-	    rowList.add(row);
+	    row = researchAndAnalysisSheet.initRow();
+	    row.addCell(getMessage("label.breakdown.by.team"), true);
+
 	    for (GroupSummary groupSummary : itemSummary) {
 		if (groupSummary.getSessionId().equals(0L)) {
 		    continue;
@@ -1589,44 +1622,39 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 
 		Collection<OptionDTO> optionDtos = groupSummary.getOptionDtos();
 
-		row = new ExcelCell[1];
-		row[0] = new ExcelCell(groupSummary.getSessionName(), true);
-		rowList.add(row);
+		row = researchAndAnalysisSheet.initRow();
+		row.addCell(groupSummary.getSessionName(), true);
 
-		row = new ExcelCell[1 + optionDtos.size()];
+		row = researchAndAnalysisSheet.initRow();
+		row.addEmptyCell();
 		for (int i = 0; i < optionDtos.size(); i++) {
-		    row[i + 1] = new ExcelCell(new Long(i + 1), false);
+		    row.addCell(Integer.valueOf(i + 1));
 		}
-		rowList.add(row);
 
 		for (OptionDTO optionDto : optionDtos) {
-		    int rowLength = isMcqItem ? 1 + optionDtos.size() : 1 + optionDto.getAttempts().length;
-		    row = new ExcelCell[rowLength];
+
+		    row = researchAndAnalysisSheet.initRow();
 		    String optionTitle = removeHtmlMarkup(optionDto.getAnswer());
 		    if (optionDto.isCorrect()) {
 			optionTitle += "(" + getMessage("label.monitoring.item.summary.correct") + ")";
 		    }
-
-		    columnCount = 0;
-		    row[columnCount++] = new ExcelCell(optionTitle, false);
+		    row.addCell(optionTitle);
 
 		    for (int numberAttempts : optionDto.getAttempts()) {
-			row[columnCount++] = new ExcelCell(new Long(numberAttempts), false);
+			row.addCell(Integer.valueOf(numberAttempts));
 		    }
-		    rowList.add(row);
 		}
 
 	    }
-	    rowList.add(ScratchieServiceImpl.EMPTY_ROW);
-	    rowList.add(ScratchieServiceImpl.EMPTY_ROW);
+	    researchAndAnalysisSheet.addEmptyRow();
+	    researchAndAnalysisSheet.addEmptyRow();
 	}
 
 	// Breakdown By Student with Timing----------------------------------------------------
 
-	row = new ExcelCell[1];
-	row[0] = new ExcelCell(getMessage("label.breakdown.by.student.with.timing"), true);
-	rowList.add(row);
-	rowList.add(ScratchieServiceImpl.EMPTY_ROW);
+	row = researchAndAnalysisSheet.initRow();
+	row.addCell(getMessage("label.breakdown.by.student.with.timing"), true);
+	researchAndAnalysisSheet.addEmptyRow();
 
 	List<ScratchieSession> sessionList = scratchieSessionDao.getByContentId(scratchie.getContentId());
 	for (ScratchieSession session : sessionList) {
@@ -1636,53 +1664,44 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 
 	    if (groupLeader != null) {
 
-		row = new ExcelCell[5];
-		row[0] = new ExcelCell(groupLeader.getFirstName() + " " + groupLeader.getLastName(), true);
-		row[1] = new ExcelCell(getMessage("label.attempts") + ":", false);
+		row = researchAndAnalysisSheet.initRow();
+		row.addCell(groupLeader.getFirstName() + " " + groupLeader.getLastName(), true);
+		row.addCell(getMessage("label.attempts") + ":");
 		Long attempts = (long) scratchieAnswerVisitDao.getLogCountTotal(sessionId);
-		row[2] = new ExcelCell(attempts, false);
-		row[3] = new ExcelCell(getMessage("label.mark") + ":", false);
-		row[4] = new ExcelCell(new Long(session.getMark()), false);
-		rowList.add(row);
+		row.addCell(attempts);
+		row.addCell(getMessage("label.mark") + ":");
+		row.addCell(Long.valueOf(session.getMark()));
 
-		row = new ExcelCell[1];
-		row[0] = new ExcelCell(getMessage("label.team.leader") + session.getSessionName(), false);
-		rowList.add(row);
+		row = researchAndAnalysisSheet.initRow();
+		row.addCell(getMessage("label.team.leader") + session.getSessionName());
 
 		for (ScratchieItem item : items) {
-		    boolean isMcqItem = item.getQbQuestion().getType() == QbQuestion.TYPE_MULTIPLE_CHOICE;
-		    row = new ExcelCell[1];
-		    row[0] = new ExcelCell(
-			    getMessage("label.question.semicolon", new Object[] { item.getQbQuestion().getName() }),
+		    row = researchAndAnalysisSheet.initRow();
+		    row.addCell(getMessage("label.question.semicolon", new Object[] { item.getQbQuestion().getName() }),
 			    false);
-		    rowList.add(row);
-		    rowList.add(ScratchieServiceImpl.EMPTY_ROW);
 
 		    int i = 1;
+		    boolean isMcqItem = item.getQbQuestion().getType() == QbQuestion.TYPE_MULTIPLE_CHOICE;
 		    List<ScratchieAnswerVisitLog> logs = scratchieAnswerVisitDao.getLogsBySessionAndItem(sessionId,
 			    item.getUid());
 		    for (ScratchieAnswerVisitLog log : logs) {
-			row = new ExcelCell[4];
-			row[0] = new ExcelCell(new Long(i++), false);
-			String optionDescr = isMcqItem ? removeHtmlMarkup(log.getQbOption().getName())
-				: log.getAnswer();
-			row[1] = new ExcelCell(optionDescr, false);
-			row[3] = new ExcelCell(fullDateFormat.format(log.getAccessDate()), false);
-			rowList.add(row);
+			row = researchAndAnalysisSheet.initRow();
+			row.addCell(Integer.valueOf(i++));
+			String answerDescr = isMcqItem ? log.getQbOption().getName() : log.getAnswer();
+			row.addCell(removeHtmlMarkup(answerDescr));
+			row.addCell(fullDateFormat.format(log.getAccessDate()));
+
 		    }
-		    rowList.add(ScratchieServiceImpl.EMPTY_ROW);
+		    researchAndAnalysisSheet.addEmptyRow();
 		}
 
 	    }
 	}
 
-	ExcelCell[][] thirdPageData = rowList.toArray(new ExcelCell[][] {});
-	dataToExport.put(getMessage("label.research.analysis"), thirdPageData);
-
 	// ======================================================= For_XLS_export(SPSS analysis) page
 	// =======================================
-
-	rowList = new LinkedList<>();
+	ExcelSheet spssAnalysisSheet = new ExcelSheet(getMessage("label.spss.analysis"));
+	sheets.add(spssAnalysisSheet);
 
 	// Table header------------------------------------
 
@@ -1693,25 +1712,24 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	    }
 	}
 
-	row = new ExcelCell[10 + (maxOptions * 2)];
-	columnCount = 0;
-	row[columnCount++] = new ExcelCell(getMessage("label.student.name"), true);
-	row[columnCount++] = new ExcelCell(getMessage("label.student.username"), true);
-	row[columnCount++] = new ExcelCell(getMessage("label.team"), true);
-	row[columnCount++] = new ExcelCell(getMessage("label.question.number"), true);
-	row[columnCount++] = new ExcelCell(getMessage("label.question"), true);
-	row[columnCount++] = new ExcelCell(getMessage("label.correct.answer"), true);
-	row[columnCount++] = new ExcelCell(getMessage("label.first.choice.accuracy"), true);
-	row[columnCount++] = new ExcelCell(getMessage("label.number.of.attempts"), true);
-	row[columnCount++] = new ExcelCell(getMessage("label.mark.awarded"), true);
+	row = spssAnalysisSheet.initRow();
+	row.addCell(getMessage("label.student.name"), true);
+	row.addCell(getMessage("label.student.username"), true);
+	row.addCell(getMessage("label.team"), true);
+	row.addCell(getMessage("label.question.number"), true);
+	row.addCell(getMessage("label.question"), true);
+	row.addCell(getMessage("label.correct.answer"), true);
+	row.addCell(getMessage("label.first.choice.accuracy"), true);
+	row.addCell(getMessage("label.number.of.attempts"), true);
+	row.addCell(getMessage("label.mark.awarded"), true);
+
 	for (int i = 0; i < maxOptions; i++) {
-	    row[columnCount++] = new ExcelCell(getMessage("label." + (i + 1) + ".answer.selected"), true);
+	    row.addCell(getMessage("label." + (i + 1) + ".answer.selected"), true);
 	}
-	row[columnCount++] = new ExcelCell(getMessage("label.date"), true);
+	row.addCell(getMessage("label.date"), true);
 	for (int i = 0; i < maxOptions; i++) {
-	    row[columnCount++] = new ExcelCell(getMessage("label.time.of.selection." + (i + 1)), true);
+	    row.addCell(getMessage("label.time.of.selection." + (i + 1)), true);
 	}
-	rowList.add(row);
 
 	// Table content------------------------------------
 
@@ -1720,22 +1738,20 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	    List<ScratchieUser> users = scratchieUserDao.getBySessionID(sessionId);
 
 	    for (ScratchieUser user : users) {
-
 		int questionCount = 1;
 		for (ScratchieItemDTO itemDto : summary.getItemDtos()) {
 
-		    row = new ExcelCell[10 + (maxOptions * 2)];
-		    columnCount = 0;
+		    row = spssAnalysisSheet.initRow();
 		    // learner name
-		    row[columnCount++] = new ExcelCell(user.getFirstName() + " " + user.getLastName(), false);
+		    row.addCell(user.getFirstName() + " " + user.getLastName());
 		    // username
-		    row[columnCount++] = new ExcelCell(user.getLoginName(), false);
+		    row.addCell(user.getLoginName());
 		    // group name
-		    row[columnCount++] = new ExcelCell(summary.getSessionName(), false);
+		    row.addCell(summary.getSessionName());
 		    // question number
-		    row[columnCount++] = new ExcelCell(new Long(questionCount++), false);
+		    row.addCell(Integer.valueOf(questionCount++));
 		    // question title
-		    row[columnCount++] = new ExcelCell(itemDto.getTitle(), false);
+		    row.addCell(itemDto.getTitle());
 
 		    // correct option
 		    String correctOption = "";
@@ -1746,7 +1762,7 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 			    correctOption = removeHtmlMarkup(correctOption);
 			}
 		    }
-		    row[columnCount++] = new ExcelCell(correctOption, false);
+		    row.addCell(correctOption);
 
 		    // isFirstChoice
 		    int attempts = itemDto.getUserAttempts();
@@ -1758,12 +1774,12 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 		    } else {
 			isFirstChoice = getMessage("label.incorrect");
 		    }
-		    row[columnCount++] = new ExcelCell(isFirstChoice, false);
+		    row.addCell(isFirstChoice);
 		    // attempts
-		    row[columnCount++] = new ExcelCell(new Long(attempts), false);
+		    row.addCell(Integer.valueOf(attempts));
 		    // mark
-		    Object mark = (itemDto.getUserMark() == -1) ? "" : new Long(itemDto.getUserMark());
-		    row[columnCount++] = new ExcelCell(mark, false);
+		    Object mark = (itemDto.getUserMark() == -1) ? "" : Long.valueOf(itemDto.getUserMark());
+		    row.addCell(mark);
 
 		    // options selected
 		    List<ScratchieAnswerVisitLog> logs = scratchieAnswerVisitDao.getLogsBySessionAndItem(sessionId,
@@ -1772,16 +1788,16 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 			logs = new ArrayList<>();
 		    }
 
+		    boolean isMcqItem = itemDto.getType() == QbQuestion.TYPE_MULTIPLE_CHOICE;
 		    for (ScratchieAnswerVisitLog log : logs) {
-			String optionText = removeHtmlMarkup(
-				log.getQbOption() == null ? log.getAnswer() : log.getQbOption().getName());
-			row[columnCount++] = new ExcelCell(optionText, false);
+			String answer = removeHtmlMarkup(isMcqItem ? log.getQbOption().getName() : log.getAnswer());
+			row.addCell(answer);
 		    }
 		    for (int i = logs.size(); i < itemDto.getOptionDtos().size(); i++) {
-			row[columnCount++] = new ExcelCell(getMessage("label.none"), false);
+			row.addCell(getMessage("label.none"));
 		    }
 		    for (int i = options.size(); i < maxOptions; i++) {
-			row[columnCount++] = new ExcelCell("", false);
+			row.addCell("");
 		    }
 
 		    // Date
@@ -1791,70 +1807,64 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 			Date accessDate = logs.iterator().next().getAccessDate();
 			dateStr = dateFormat.format(accessDate);
 		    }
-		    row[columnCount++] = new ExcelCell(dateStr, false);
+		    row.addCell(dateStr);
 
 		    // time of selection
 		    SimpleDateFormat timeFormat = new SimpleDateFormat("HH:mm:ss");
 		    for (ScratchieAnswerVisitLog log : logs) {
 			Date accessDate = log.getAccessDate();
 			String timeStr = timeFormat.format(accessDate);
-			row[columnCount++] = new ExcelCell(timeStr, false);
+			row.addCell(timeStr);
 		    }
 		    for (int i = logs.size(); i < maxOptions; i++) {
-			row[columnCount++] = new ExcelCell("", false);
+			row.addCell("");
 		    }
-
-		    rowList.add(row);
 		}
-
 	    }
-
 	}
 
-	ExcelCell[][] fourthPageData = rowList.toArray(new ExcelCell[][] {});
-	dataToExport.put(getMessage("label.spss.analysis"), fourthPageData);
-
-	// ======================================================= Burning questions page
-	// =======================================
-
+	// =========================  Burning questions page ======================================
 	if (scratchie.isBurningQuestionsEnabled()) {
-	    rowList = new LinkedList<>();
+	    ExcelSheet burningQuestionsSheet = new ExcelSheet(getMessage("label.burning.questions"));
+	    sheets.add(burningQuestionsSheet);
 
-	    row = new ExcelCell[1];
-	    row[0] = new ExcelCell(getMessage("label.burning.questions"), true);
-	    rowList.add(row);
-	    rowList.add(ScratchieServiceImpl.EMPTY_ROW);
+	    row = burningQuestionsSheet.initRow();
+	    row.addCell(getMessage("label.burning.questions"), true);
+	    burningQuestionsSheet.addEmptyRow();
 
-	    row = new ExcelCell[3];
-	    row[0] = new ExcelCell(getMessage("label.monitoring.summary.user.name"), IndexedColors.BLUE);
-	    row[1] = new ExcelCell(getMessage("label.burning.questions"), IndexedColors.BLUE);
-	    row[2] = new ExcelCell(getMessage("label.count"), IndexedColors.BLUE);
-	    rowList.add(row);
+	    row = burningQuestionsSheet.initRow();
+	    row.addCell("#", IndexedColors.BLUE);
+	    row.addCell(getMessage("label.monitoring.summary.user.name"), IndexedColors.BLUE);
+	    row.addCell(getMessage("label.burning.questions"), IndexedColors.BLUE);
+	    row.addCell(getMessage("label.count"), IndexedColors.BLUE);
 
 	    List<BurningQuestionItemDTO> burningQuestionItemDtos = getBurningQuestionDtos(scratchie, null, true);
+	    int index = 1;
 	    for (BurningQuestionItemDTO burningQuestionItemDto : burningQuestionItemDtos) {
 		ScratchieItem item = burningQuestionItemDto.getScratchieItem();
-		row = new ExcelCell[1];
-		row[0] = new ExcelCell(item.getQbQuestion().getName(), false);
-		rowList.add(row);
+
+		row = burningQuestionsSheet.initRow();
+		if (index < burningQuestionItemDtos.size()) {
+		    row.addCell(index++);
+		} else {
+		    row.addEmptyCell();
+		}
+
+		row.addCell(item.getQbQuestion().getName());
 
 		List<BurningQuestionDTO> burningQuestionDtos = burningQuestionItemDto.getBurningQuestionDtos();
 		for (BurningQuestionDTO burningQuestionDto : burningQuestionDtos) {
 		    String burningQuestion = burningQuestionDto.getBurningQuestion().getQuestion();
-		    row = new ExcelCell[3];
-		    row[0] = new ExcelCell(burningQuestionDto.getSessionName(), false);
-		    row[1] = new ExcelCell(burningQuestion, false);
-		    row[2] = new ExcelCell(burningQuestionDto.getLikeCount(), false);
-		    rowList.add(row);
+		    row = burningQuestionsSheet.initRow();
+		    row.addCell(burningQuestionDto.getSessionName());
+		    row.addCell(burningQuestion);
+		    row.addCell(burningQuestionDto.getLikeCount());
 		}
-		rowList.add(ScratchieServiceImpl.EMPTY_ROW);
+		burningQuestionsSheet.addEmptyRow();
 	    }
-
-	    ExcelCell[][] fifthPageData = rowList.toArray(new ExcelCell[][] {});
-	    dataToExport.put(getMessage("label.burning.questions"), fifthPageData);
 	}
 
-	return dataToExport;
+	return sheets;
     }
 
     @Override
@@ -1895,7 +1905,8 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
     /**
      * Serves merely for excel export purposes. Produces data for "Summary By Team" section.
      */
-    private List<GroupSummary> getSummaryByTeam(Scratchie scratchie, Collection<ScratchieItem> sortedItems) {
+    @Override
+    public List<GroupSummary> getSummaryByTeam(Scratchie scratchie, Collection<ScratchieItem> sortedItems) {
 	List<GroupSummary> groupSummaries = new ArrayList<>();
 	String[] presetMarks = getPresetMarks(scratchie);
 
@@ -1907,10 +1918,7 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	    ArrayList<ScratchieItemDTO> itemDtos = new ArrayList<>();
 
 	    ScratchieUser groupLeader = session.getGroupLeader();
-
 	    List<ScratchieAnswerVisitLog> logs = scratchieAnswerVisitDao.getLogsBySession(sessionId);
-	    //populate Scratchie items with VSA answers (both from Assessment tool and entered by current learner)
-	    fillItemsWithVsaAnswers(sortedItems, sessionId, scratchie, logs);
 
 	    for (ScratchieItem item : sortedItems) {
 		ScratchieItemDTO itemDto = new ScratchieItemDTO();
@@ -1918,7 +1926,8 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 		int mark = -1;
 		boolean isUnraveledOnFirstAttempt = false;
 		String optionsSequence = "";
-		boolean isMcqItem = item.getQbQuestion().getType() == QbQuestion.TYPE_MULTIPLE_CHOICE;
+		QbQuestion qbQuestion = item.getQbQuestion();
+		boolean isMcqItem = qbQuestion.getType() == QbQuestion.TYPE_MULTIPLE_CHOICE;
 
 		// if there is no group leader don't calculate numbers - there aren't any
 		if (groupLeader != null) {
@@ -1940,20 +1949,28 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 			    && ScratchieServiceImpl.isItemUnraveled(item, logs);
 
 		    // find out options' sequential letters - A,B,C...
-		    for (ScratchieAnswerVisitLog itemAttempt : visitLogs) {
+		    for (ScratchieAnswerVisitLog visitLog : visitLogs) {
 			String sequencialLetter = "";
 
-			int optionCount = 1;
-			for (OptionDTO optionDto : item.getOptionDtos()) {
-			    boolean isOptionMet = isMcqItem
-				    && optionDto.getQbOptionUid().equals(itemAttempt.getQbOption().getUid())
-				    || !isMcqItem
-					    && isAnswersEqual(item, optionDto.getAnswer(), itemAttempt.getAnswer());
-			    if (isOptionMet) {
-				sequencialLetter = String.valueOf((char) ((optionCount + 'A') - 1));
-				break;
+			if (isMcqItem) {
+			    int optionCount = 1;
+			    for (OptionDTO optionDto : item.getOptionDtos()) {
+				boolean isOptionMet = optionDto.getQbOptionUid()
+					.equals(visitLog.getQbOption().getUid());
+				if (isOptionMet) {
+				    sequencialLetter = String.valueOf((char) ((optionCount + 'A') - 1));
+				    break;
+				}
+				optionCount++;
 			    }
-			    optionCount++;
+
+			} else {
+			    String answer = visitLog.getAnswer();
+			    boolean isCorrect = ScratchieServiceImpl.isItemUnraveledByAnswers(item, List.of(answer));
+			    boolean isFirstAnswersGroupCorrect = qbQuestion.getQbOptions().get(0).isCorrect();
+
+			    sequencialLetter = isCorrect && isFirstAnswersGroupCorrect
+				    || !isCorrect && !isFirstAnswersGroupCorrect ? "A" : "B";
 			}
 
 			optionsSequence += optionsSequence.isEmpty() ? sequencialLetter : ", " + sequencialLetter;
@@ -1961,7 +1978,8 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 		}
 
 		itemDto.setUid(item.getUid());
-		itemDto.setTitle(item.getQbQuestion().getName());
+		itemDto.setTitle(qbQuestion.getName());
+		itemDto.setType(qbQuestion.getType());
 		itemDto.setOptionDtos(item.getOptionDtos());
 		itemDto.setUserAttempts(numberOfAttempts);
 		itemDto.setUserMark(mark);
@@ -2398,8 +2416,6 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	    return;
 	}
 
-	// as long as leader aware feature is always ON - copy answers from leader to non-leader user
-
 	ScratchieUser scratchieUser = scratchieUserDao.getUserByUserIDAndSessionID(userId, toolSessionId);
 	// create user if he hasn't accessed this activity yet
 	if (scratchieUser == null) {
@@ -2407,8 +2423,24 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	    createUser(scratchieUser);
 	}
 
-	// as long as there is no individual results in Scratchie tool (but rather one for entire group) there is no
-	// need to copyAnswersFromLeader()
+	checkLeaderSelectToolForSessionLeader(scratchieUser, toolSessionId);
+	//if this is a leader finishes, complete all non-leaders as well
+	boolean isUserGroupLeader = session.isUserGroupLeader(scratchieUser.getUid());
+	if (isUserGroupLeader) {
+	    getUsersBySession(toolSessionId).forEach(sessionUser -> {
+		//finish users
+		sessionUser.setSessionFinished(true);
+		scratchieUserDao.saveObject(user);
+
+		// as long as there is no individual results in Scratchie tool (but rather one for entire group) there is no
+		// need to copyAnswersFromLeader()
+	    });
+
+	} else {
+	    //finish user
+	    scratchieUser.setSessionFinished(true);
+	    scratchieUserDao.saveObject(scratchieUser);
+	}
     }
 
     /* =================================================================================== */
@@ -2527,42 +2559,70 @@ public class ScratchieServiceImpl implements IScratchieService, ICommonScratchie
 	// Scratchie Items
 	Set<ScratchieItem> newItems = new LinkedHashSet<>();
 
+	QbCollection collection = qbService.getUserPrivateCollection(userID);
+	Set<String> collectionUUIDs = collection == null ? new HashSet<>()
+		: qbService.getCollectionQuestions(collection.getUid()).stream().filter(q -> q.getUuid() != null)
+			.collect(Collectors.mapping(q -> q.getUuid().toString(), Collectors.toSet()));
+
 	ArrayNode questions = JsonUtil.optArray(toolContentJSON, RestTags.QUESTIONS);
 	for (int i = 0; i < questions.size(); i++) {
+	    boolean addToCollection = false;
 	    ObjectNode questionData = (ObjectNode) questions.get(i);
 
 	    ScratchieItem item = new ScratchieItem();
 	    item.setDisplayOrder(JsonUtil.optInt(questionData, RestTags.DISPLAY_ORDER));
-	    QbQuestion qbQuestion = new QbQuestion();
-
-	    qbQuestion.setType(QbQuestion.TYPE_MULTIPLE_CHOICE);
-	    qbQuestion.setQuestionId(qbService.generateNextQuestionId());
-	    qbQuestion.setName(JsonUtil.optString(questionData, RestTags.QUESTION_TITLE));
-	    qbQuestion.setDescription(JsonUtil.optString(questionData, RestTags.QUESTION_TEXT));
 	    item.setToolContentId(scratchie.getContentId());
-	    scratchieDao.insert(qbQuestion);
-	    item.setQbQuestion(qbQuestion);
-	    newItems.add(item);
 
-	    // set options
-	    List<QbOption> newOptions = new LinkedList<>();
+	    QbQuestion qbQuestion = null;
+	    String uuid = JsonUtil.optString(questionData, RestTags.QUESTION_UUID);
 
-	    ArrayNode answersData = JsonUtil.optArray(questionData, RestTags.ANSWERS);
-	    for (int j = 0; j < answersData.size(); j++) {
-		ObjectNode answerData = (ObjectNode) answersData.get(j);
-		QbOption option = new QbOption();
-		// Removes redundant new line characters from options left by CKEditor (otherwise it will break
-		// Javascript in monitor). Copied from AuthoringAction.
-		String optionDescription = JsonUtil.optString(answerData, RestTags.ANSWER_TEXT);
-		option.setName(optionDescription != null ? optionDescription.replaceAll("[\n\r\f]", "") : "");
-		option.setCorrect(JsonUtil.optBoolean(answerData, RestTags.CORRECT));
-		option.setDisplayOrder(JsonUtil.optInt(answerData, RestTags.DISPLAY_ORDER));
-		option.setQbQuestion(item.getQbQuestion());
-		newOptions.add(option);
+	    // try to match the question to an existing QB question in DB
+	    if (StringUtils.isNotBlank(uuid)) {
+		qbQuestion = qbService.getQuestionByUUID(UUID.fromString(uuid));
 	    }
 
-	    item.getQbQuestion().setQbOptions(newOptions);
+	    if (qbQuestion == null) {
+		addToCollection = collection != null;
 
+		qbQuestion = new QbQuestion();
+		qbQuestion.setType(QbQuestion.TYPE_MULTIPLE_CHOICE);
+		qbQuestion.setQuestionId(qbService.generateNextQuestionId());
+		qbQuestion.setName(JsonUtil.optString(questionData, RestTags.QUESTION_TITLE));
+		qbQuestion.setDescription(JsonUtil.optString(questionData, RestTags.QUESTION_TEXT));
+		scratchieDao.insert(qbQuestion);
+
+		// set options
+		List<QbOption> newOptions = new LinkedList<>();
+
+		ArrayNode answersData = JsonUtil.optArray(questionData, RestTags.ANSWERS);
+		for (int j = 0; j < answersData.size(); j++) {
+		    ObjectNode answerData = (ObjectNode) answersData.get(j);
+		    QbOption option = new QbOption();
+		    // Removes redundant new line characters from options left by CKEditor (otherwise it will break
+		    // Javascript in monitor). Copied from AuthoringAction.
+		    String optionDescription = JsonUtil.optString(answerData, RestTags.ANSWER_TEXT);
+		    option.setName(optionDescription != null ? optionDescription.replaceAll("[\n\r\f]", "") : "");
+		    option.setCorrect(JsonUtil.optBoolean(answerData, RestTags.CORRECT));
+		    option.setDisplayOrder(JsonUtil.optInt(answerData, RestTags.DISPLAY_ORDER));
+		    option.setQbQuestion(qbQuestion);
+		    newOptions.add(option);
+		}
+
+		qbQuestion.setQbOptions(newOptions);
+	    } else if (collection != null && !collectionUUIDs.contains(uuid)) {
+		addToCollection = true;
+	    }
+
+	    item.setQbQuestion(qbQuestion);
+	    // we need to save item now so it gets an ID and it will be recognised in a set
+	    scratchieItemDao.insert(item);
+	    newItems.add(item);
+
+	    // all questions need to end up in user's private collection
+	    if (addToCollection) {
+		qbService.addQuestionToCollection(collection.getUid(), qbQuestion.getQuestionId(), false);
+		collectionUUIDs.add(uuid);
+	    }
 	}
 
 	scratchie.setScratchieItems(newItems);
